--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <h1>Hi, I'm Someone! 👋 Welcome to my creative coding projects.</h1>
+    <h1>Hi, I'm Diana! 👋 Welcome to my creative coding projects.</h1>
 
     <div class="projects-grid">
         <div class="project-card">
