--- a/project2/project-2.html
+++ b/project2/project-2.html
@@ -4,7 +4,7 @@
 <head>
     <title>Project2</title>
 
-    <link rel="stylesheet" type="text/css" href="../../style.css">
+    <link rel="stylesheet" href="../../style.css">
     <meta charset="utf-8" />
 
     <h2>Project 2: Face Generator</h2>
