added header & update style.css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="project-card">
-            <a href="p4.html" class="project-link">
+            <a href="project4/project-4.html" class="project-link">
                 <h2>Exquisite Corpse</h2>
                 <div id="sketch-4"></div>
                 <script src="https://editor.p5js.org/chald900/embed/vwgf3Gt0i"></script>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="project-card">
-            <a href="p5.html" class="project-link">
+            <a href="project5/project-5.html" class="project-link">
                 <h2>Illusion</h2>
                 <div id="sketch-5"></div>
                 <script src="https://editor.p5js.org/chald900/embed/PBc26Q0PK"></script>
@@ -62,7 +62,7 @@
         </div>
 
         <div class="project-card">
-            <a href="p6.html" class="project-link">
+            <a href="project6/project-6.html" class="project-link">
                 <h2>Array Data</h2>
                 <div id="sketch-6"></div>
                 <script src="https://editor.p5js.org/chald900/embed/jdE84o171"></script>
@@ -70,7 +70,7 @@
         </div>
 
         <div class="project-card">
-            <a href="p7.html" class="project-link">
+            <a href="project7/project-7.html" class="project-link">
                 <h2>Flower Planting Game</h2>
                 <div id="sketch-7"></div>
                 <script src="https://editor.p5js.org/chald900/embed/_ijfZ46g7"></script>
