--- a/project1/project-1.html
+++ b/project1/project-1.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-
+    <div class="header">
+        <a href="index.html" class="logo">DC</a>
+        <div class="nav-links">
+            <a href="resume.html">CV</a>
+            <a href="about.html">About</a>
+        </div>
+    </div>
     <h1>Project 1</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
