--- a/project3/project-3.html
+++ b/project3/project-3.html
@@ -4,13 +4,19 @@
 <head>
     <title>Project3</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="utf-8" />
 
 </head>
 
 <body>
-
+    <div class="header">
+        <a href="index.html" class="logo">DC</a>
+        <div class="nav-links">
+            <a href="resume.html">CV</a>
+            <a href="about.html">About</a>
+        </div>
+    </div>
     <h1>Project3</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
