--- a/project2/project-2.html
+++ b/project2/project-2.html
@@ -11,7 +11,14 @@
 </head>
 
 <body>
-
+    <div class="header">
+        <a href="index.html" class="logo">DC</a>
+        <div class="nav-links">
+            <a href="resume.html">CV</a>
+            <a href="about.html">About</a>
+        </div>
+    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
