--- a/project1/project-1.html
+++ b/project1/project-1.html
@@ -4,7 +4,7 @@
 <head>
     <title>Project1</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../styles.css">
     <meta charset="utf-8" />
 
 </head>
