inclusion of description and reflections

--- a/project4/project-4.html
+++ b/project4/project-4.html
@@ -21,6 +21,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
+
+
+    <p><h3>PROCESS:</h3> <br>
+        We all respectively drew our different characters, as seen in the assets folder included. I decided to take Ryan's head, Jovana's body, and Shawki's leg to create my character. We didn't really <br>
+        share background stories of our characters, but Ryan mentioned that his character was inspired by his lunch, with the head being a meatball and the little top being a mushroom. <br>
+        <br>
+        <h3>BACKGROUND STORY:</h3><br>
+        A background story I've thought of for this character is that he's a mischevious guy who loves to eat mushrooms, only moves on the X-axis, and never shows his hands.<br>
+        <br>
+        <h3>REFLECTION:</h3><br>
+        I really enjoyed this project! I feel like it was kind of relaxing to draw it out, and the coursor help made it a very smooth process. I liked how all of the parts contrasted with one another to <br>
+        make it seem disjointed and clearly from 3 different characters, it made it seem uniquely cartoon-y. This was also a great project for function practice and comprehension, since if I had written<br>
+         all the individual parts of all characters, instead of commenting out code I don’t want to use but might still be valuable if I want to draw a different permutation of parts, I could just put it in <br>
+         a function and not call that function - giving me a lot of control over my drawing.</p>
+
 </body>
 
 </html>
