--- a/project3/project-3.html
+++ b/project3/project-3.html
@@ -21,6 +21,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
+
+
+    <p>My experimental clock is a dandillion growing through time, counting up to 10 seconds and tallying the times that it's counted up to 10. I considered making it more connected <br>
+        to counting minutes as well as the count, but I thought this would make it more novel. I considered making a person growing up for example, but I like the idea that flowers <br>
+       can be used to track time in contrast to their ephemerality more. I had a really hard time figuring out what to do, and because of things happening in my personal life this week, <br>
+       I wasn't able to really get too into the detail of the dandillion - I wish I would have added the puffs on the end to make it more recognizable. <br>
+       <br>
+       My overall reflection of this assignment is moreso a personal reflection of the reality check of how much time I need to apply to schoolwork - the first couple weeks were calm, <br>
+       but after not being in school for a bit, this week kind of hit, so ironically I reflected a lot on the concept of time while making a flower grow through time. I really enjoyed <br>
+       some elements of thinking of time outside of the context of clocks though, it's kind of lovely to see how many things are affected by the passing of time.</p>
+
 </body>
 
 </html>
