--- a/project5/project-5.html
+++ b/project5/project-5.html
@@ -21,6 +21,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
+
+
+    <p> This assignment was very hard for me to be completely honest! I wasn't able to make it to the lab for it, so there was a lot of questioning my peers, Googling, <br>
+        and YouTube videos. I think I need to get more comfortable with asking for help directly. I was talking with my boyfriend about the assignment and he showed me that <br>
+        famous illusion of the alternating squares, so I decided to make them move across the screen! I don't think it could be deployed in the world in any way, realistically <br>
+        it's close to flashing lights so it might be dangerous for users with flashing light sensitivity.</p>
+
 </body>
 
 </html>
