--- a/project7/project-7.html
+++ b/project7/project-7.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <!-- <div class="header">
+    <div class="header">
         <a href="index.html" class="logo">DC</a>
         <div class="nav-links">
             <a href="resume.html">CV</a>
             <a href="about.html">About</a>
-        </div> -->
+        </div>
     </div>
     <h1>Project 7</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
