--- a/project7/project-7.html
+++ b/project7/project-7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Project </title>
+    <title>Project7</title>
 
     <link rel="stylesheet" href="../styles.css">
     <meta charset="utf-8" />
