header file path fix

--- a/project1/project-1.html
+++ b/project1/project-1.html
@@ -11,10 +11,10 @@
 
 <body>
     <div class="header">
-        <a href="index.html" class="logo">DC</a>
+        <a href="../index.html" class="logo">DC</a>
         <div class="nav-links">
-            <a href="resume.html">CV</a>
-            <a href="about.html">About</a>
+            <a href="../resume.html">CV</a>
+            <a href="../about.html">About</a>
         </div>
     </div>
     <h1>Project 1</h1>
