--- a/project6/project-6.html
+++ b/project6/project-6.html
@@ -11,12 +11,13 @@
 
 <body>
     <div class="header">
-        <a href="index.html" class="logo">DC</a>
+        <a href="../index.html" class="logo">DC</a>
         <div class="nav-links">
-            <a href="resume.html">CV</a>
-            <a href="about.html">About</a>
+            <a href="../resume.html">CV</a>
+            <a href="../about.html">About</a>
         </div>
     </div>
+    
     <h1>Project 6</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
