--- a/project1/project-1.html
+++ b/project1/project-1.html
@@ -21,6 +21,38 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
+
+    <div class="project-description">
+        <p>
+            Initially, the lack of description of the object details caught me off guard, but once my partner told me
+            what the
+            object was, it became much clearer. All throughout the different
+            stages of the assignment I struggled with finding a balance between what we perceived to be money if it's in
+            a
+            "cartoon" form so to speak and what a real-life dollar bill looks like.
+            Before looking up a picture of a dollar bill, I started with making it a very dark green, then tried to make
+            it too
+            realistic with the very faded green and gray colors, but neither really worked.
+            Did you know that there is more gray on our dollar bills than green? In the end I decided to settle on a
+            combination
+            between the two - more faded colors, but
+            green in places where we'd expect it to be on cartoon money. Another balance issue I had was questioning for
+            a while
+            how much detail to go into. In the end, I decided to ensure that it was obvious it was a dollar bill by
+            adding the
+            ones in the right places and putting good ol' George in the middle. The latter took me a while to figure
+            out, as we
+            had not learned it in class, but I think especially with using blendMode() to make him the right coloring,
+            it made the final result kind of funny and all the more worth it. It ended up being a perfect object for the
+            code we
+            were learning, as I got to practice placing and moving around 2D objects on the grid, text placement,
+            rotation, and
+            especially with the correct "layering" of the code
+            so to speak. The latter was the most difficult for me, but the use of push()/pop() and much practice, I
+            figued it
+            out.
+        </p>
+    </div>
 </body>
 
 </html>
