fix2 about & resume

--- a/resume.html
+++ b/resume.html
@@ -1,11 +1,18 @@
-<link rel="stylesheet" href="styles.css">
+<!DOCTYPE html>
 
-<div class="header">
-    <a href="index.html" class="logo">DC</a>
-    <div class="nav-links">
-        <a href="resume.html">CV</a>
-        <a href="about.html">About</a>
+<head>
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+    <div class="header">
+        <a href="index.html" class="logo">DC</a>
+        <div class="nav-links">
+            <a href="resume.html">CV</a>
+            <a href="about.html">About</a>
+        </div>
     </div>
-</div>
 
-<img src="resume.png" alt="Resume">
+    <img src="resume.png" alt="Resume">
+</body>
