--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
     <div class="projects-grid">
         <div class="project-card">
-            <!-- <a href="p1.html" class="project-link"> -->
             <a href="project1/project-1.html" class="project-link">
                 <h2>Lost & Found</h2>
                 <div id="sketch-1"></div>
                 <script src="https://editor.p5js.org/embed/chald900/embed/JLFhitM-G"></script>
+                <img src="p1.png">
+
             </a>
         </div>
 
@@ -34,6 +35,7 @@
                 <h2>Face Generator</h2>
                 <div id="sketch-2"></div>
                 <script src="https://editor.p5js.org/chald900/embed/PkQfASyrN"></script>
+                <img src="p2.png">
             </a>
         </div>
 
@@ -42,6 +44,7 @@
                 <h2>Experimental Clock</h2>
                 <div id="sketch-3"></div>
                 <script src="https://editor.p5js.org/chald900/embed/h_Uuf8aok"></script>
+                <img src="p3.png">
             </a>
         </div>
 
@@ -50,6 +53,7 @@
                 <h2>Exquisite Corpse</h2>
                 <div id="sketch-4"></div>
                 <script src="https://editor.p5js.org/chald900/embed/vwgf3Gt0i"></script>
+                <img src="p4.png">
             </a>
         </div>
 
@@ -58,6 +62,7 @@
                 <h2>Illusion</h2>
                 <div id="sketch-5"></div>
                 <script src="https://editor.p5js.org/chald900/embed/PBc26Q0PK"></script>
+                <img src="p5.png">
             </a>
         </div>
 
@@ -66,14 +71,16 @@
                 <h2>Array Data</h2>
                 <div id="sketch-6"></div>
                 <script src="https://editor.p5js.org/chald900/embed/jdE84o171"></script>
+                <img src="p6.png">
             </a>
         </div>
 
         <div class="project-card">
             <a href="project7/project-7.html" class="project-link">
-                <h2>Flower Planting Game</h2>
+                <h2>Planting Game</h2>
                 <div id="sketch-7"></div>
                 <script src="https://editor.p5js.org/chald900/embed/_ijfZ46g7"></script>
+                <img src="p7.png">
             </a>
         </div>
     </div>
