--- a/project6/project-6.html
+++ b/project6/project-6.html
@@ -17,8 +17,8 @@
             <a href="../about.html">About</a>
         </div>
     </div>
-    
-    <h1>Project 6</h1>
+
+    <h1>Project 6: Array Data</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
@@ -38,7 +38,7 @@
         it only gains by being able to appeal to visual learners as well while not <br>
         necessarily detracting from those who are not visual learners. I feel like I definitely need to stop looking at
         my peers' projects though hahaha they're all soooo so talented, but my little heart does the job!
-     </p>
+    </p>
 
 </body>
 
