--- a/project7/project-7.html
+++ b/project7/project-7.html
@@ -17,7 +17,7 @@
             <a href="../about.html">About</a>
         </div>
     </div>
-    <h1>Project 7</h1>
+    <h1>Project 7: Flower Planting Game</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
