--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
         <div class="project-card">
             <a href="project1/project-1.html" class="project-link">
                 <h2>Lost & Found</h2>
-                <div id="sketch-1"></div>
-                <script src="https://editor.p5js.org/embed/chald900/embed/JLFhitM-G"></script>
+                <div id="sketch-1">
+
+                </div>
                 <img src="p1.png">
+
 
             </a>
         </div>
