--- a/project1/project-1.html
+++ b/project1/project-1.html
@@ -17,7 +17,7 @@
             <a href="../about.html">About</a>
         </div>
     </div>
-    <h1>Project 1</h1>
+    <h1>Project 1: Lost & Found</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
@@ -49,8 +49,7 @@
             rotation, and
             especially with the correct "layering" of the code
             so to speak. The latter was the most difficult for me, but the use of push()/pop() and much practice, I
-            figued it
-            out.
+            figued it out.
         </p>
     </div>
 </body>
