fix paragraph spacing

--- a/project2/project-2.html
+++ b/project2/project-2.html
@@ -46,7 +46,7 @@
     like the form of both these things (the circles as well as their organization) complemented each other nicely. As
     people, we love circular objects - hence why all the villains in the animated <br>
     movies you may have watched growing up (like Disney for example) all have sharp corners. I wanted my faces to feel
-    pleasant for the viewer to look at and play around with - some of the random color combinations <br>
+    pleasant for the viewer to look at and play around with - some of the random color combinations
     themselves can be unpleasant at times, so I did not want to add any more unpleasantness to our brain's experience of
     the design.</p>
 
