--- a/project7/project-7.html
+++ b/project7/project-7.html
@@ -26,8 +26,8 @@
         My game is about a girl who loves to plant flowers. You start the game off with her waking up in her room and
         receive instructions to go to one of the three pots sitting <br>
         in her room. Each pot is a respective flower, with the right one being sunflowers, middle one daisys, and the
-        right one tulips. Once you get to the planting scenes, you have to plant 5 seeds of the respective flower. <br>
-        Once all the seeds are planted, you receive instructions to get back into bed because you're so sleepy, and the
+        right one tulips. Once you get to the planting scenes, you have to plant 5 seeds of the respective flower. Once
+        all the seeds are planted, you receive instructions to get back into bed because you're so sleepy, and the
         game restarts. <br>
         <br>
         Initially when planning out my game, my plan was that once planted, each flower would lead to a different nature
